# mplstudio

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: demo.ipynb  scanpy_umap.ipynb
mplstudio/: __init__.py  palettes.py  style.py  widget.py
mplstudio/style/: __init__.py  _artists.py  _axes.py  _colors.py  _figure.py  _grid_spines.py  _legend.py  _opacity.py  _ticks.py  _typography.py
mplstudio/widget/: __init__.py  _constants.py  _ctx.py  _helpers.py  _studio.py  _theme.py
mplstudio/widget/_sections/: axes.py  colors.py  figure_size.py  grid_spines.py  legend.py  opacity.py  palette_suggestions.py  save.py  ticks.py  typography.py
tests/: test_scanpy_support.py  test_style.py
