[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplstudio"
version = "0.1.0"
description = "GUI tool for matplotlib styling in Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Seo-Yoon Moon", email = "smoon2@andrew.cmu.edu" }]
keywords = ["matplotlib", "jupyter", "visualization", "styling", "gui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
    "ipywidgets>=8.0",
    "ipympl>=0.9",
]

[project.optional-dependencies]
dev = ["pytest", "jupyterlab"]

[project.urls]
Homepage = "https://github.com/smoon2/mplstudio"
Issues = "https://github.com/smoon2/mplstudio/issues"
